Bug fix: Enabling task border in dark mode.

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,10 @@ body {
   background-color: var(--thumb-bg); 
 }
 
+.list {
+  border: 2px solid var(--border-color);
+}
+
 
 .task {
   width: 500px;
@@ -110,7 +114,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0px 20px;
-  margin: 2px;
+  margin: 1px;
   border: 2px solid var(--border-color);
   background-color: var(--element-bg);
   -webkit-box-shadow: -1px 1px 4px 1px var(--shadow-color);
